[workspace]
resolver = "2"
members = [
    "dragonfly-client",
    "dragonfly-client-backend",
    "dragonfly-client-config",
    "dragonfly-client-core",
    "dragonfly-client-init",
    "dragonfly-client-storage",
    "dragonfly-client-util",
    "dragonfly-client-backend/examples/plugin",
]

[workspace.package]
version = "1.0.15"
authors = ["The Dragonfly Developers"]
homepage = "https://d7y.io/"
repository = "https://github.com/dragonflyoss/client.git"
keywords = ["dragonfly", "dragonfly-client", "p2p", "container", "docker-image"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[workspace.dependencies]
dragonfly-client = { path = "dragonfly-client", version = "1.0.15" }
dragonfly-client-core = { path = "dragonfly-client-core", version = "1.0.15" }
dragonfly-client-config = { path = "dragonfly-client-config", version = "1.0.15" }
dragonfly-client-storage = { path = "dragonfly-client-storage", version = "1.0.15" }
dragonfly-client-backend = { path = "dragonfly-client-backend", version = "1.0.15" }
dragonfly-client-util = { path = "dragonfly-client-util", version = "1.0.15" }
dragonfly-client-init = { path = "dragonfly-client-init", version = "1.0.15" }
dragonfly-api = "2.1.61"
thiserror = "2.0"
futures = "0.3.31"
reqwest = { version = "0.12.22", features = [
    "stream",
    "rustls-tls",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
    "blocking",
    "hickory-dns",
], default-features = false }
reqwest-middleware = "0.4"
rcgen = { version = "0.12.1", features = ["x509-parser"] }
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1.16", features = [
    "client",
    "client-legacy",
    "tokio",
    "server-auto",
    "http1",
    "http2",
] }
hyper-rustls = { version = "0.27.7", features = ["http1", "http2", "logging", "aws-lc-rs"] }
http-range-header = "0.4.2"
tracing = "0.1"
url = "2.5.4"
rustls = { version = "0.23.31", features = ["tls12", "aws-lc-rs"] }
rustls-pki-types = "1.12.0"
rustls-pemfile = "2.2.0"
sha2 = "0.10"
crc32fast = "1.5.0"
uuid = { version = "1.16", features = ["v4"] }
hex = "0.4"
rocksdb = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
http = "1"
tonic = { version = "0.12.2", features = ["tls"] }
tonic-reflection = "0.12.3"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
tokio-util = { version = "0.7.16", features = ["full"] }
tokio-stream = "0.1.17"
validator = { version = "0.16", features = ["derive"] }
warp = "0.3.5"
headers = "0.4.1"
regex = "1.11.1"
humantime = "2.1.0"
prost-wkt-types = "0.6"
chrono = { version = "0.4.41", features = ["serde", "clock"] }
openssl = { version = "0.10", features = ["vendored"] }
opendal = { git = "https://github.com/apache/opendal.git", rev = "7c9c505b4880cad14824b2a22090723ef68ecce5", features = [
    "services-s3",
    "services-azblob",
    "services-gcs",
    "services-oss",
    "services-obs",
    "services-cos",
    "services-webhdfs",
] }
clap = { version = "4.5.45", features = ["derive"] }
anyhow = "1.0.99"
toml_edit = "0.22.26"
toml = "0.8.23"
bytesize = { version = "1.3.3", features = ["serde"] }
bytesize-serde = "0.2.1"
percent-encoding = "2.3.2"
tempfile = "3.20.0"
tokio-rustls = { version = "0.26.2", default-features = false, features = [
  "aws-lc-rs",
] }
serde_json = "1.0.142"
lru = "0.12.5"
fs2 = "0.4.3"
lazy_static = "1.5"
bytes = "1.10"
local-ip-address = "0.6.5"
sysinfo = { version = "0.32.1", default-features = false, features = ["component", "disk", "network", "system", "user"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
incremental = true
strip = false

[profile.bench]
debug = true
