[workspace]
resolver = "2"
members = [
    "dragonfly-client",
    "dragonfly-client-backend",
    "dragonfly-client-config",
    "dragonfly-client-core",
    "dragonfly-client-init",
    "dragonfly-client-storage",
    "dragonfly-client-util",
    "dragonfly-client-backend/examples/plugin",
    "dragonfly-client-metric",
]

[workspace.package]
version = "1.1.13"
authors = ["The Dragonfly Developers"]
homepage = "https://d7y.io/"
repository = "https://github.com/dragonflyoss/client.git"
keywords = ["dragonfly", "dragonfly-client", "p2p", "container", "docker-image"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[workspace.dependencies]
dragonfly-client = { path = "dragonfly-client", version = "1.1.13" }
dragonfly-client-core = { path = "dragonfly-client-core", version = "1.1.13" }
dragonfly-client-config = { path = "dragonfly-client-config", version = "1.1.13" }
dragonfly-client-storage = { path = "dragonfly-client-storage", version = "1.1.13" }
dragonfly-client-backend = { path = "dragonfly-client-backend", version = "1.1.13" }
dragonfly-client-metric = { path = "dragonfly-client-metric", version = "1.1.13" }
dragonfly-client-util = { path = "dragonfly-client-util", version = "1.1.13" }
dragonfly-client-init = { path = "dragonfly-client-init", version = "1.1.13" }
dragonfly-api = "=2.2.7"
thiserror = "2.0"
futures = "0.3.31"
reqwest = { version = "0.12.26", features = [
    "stream",
    "native-tls",
    "default-tls",
    "rustls-tls",
    "blocking",
    "hickory-dns",
] }
reqwest-middleware = "0.4"
rcgen = { version = "0.12.1", features = ["x509-parser"] }
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1.19", features = [
    "client",
    "client-legacy",
    "tokio",
    "server-auto",
    "http1",
    "http2",
] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["http1", "http2", "logging", "ring"] }
http-range-header = "0.4.2"
tracing = "0.1"
url = "2.5.4"
rustls = { version = "0.23.35", default-features = false, features = ["tls12", "ring"] }
rustls-pki-types = "1.13.1"
rustls-pemfile = "2.2.0"
sha2 = "0.10"
crc32fast = "1.5.0"
uuid = { version = "1.16", features = ["v4"] }
hex = "0.4"
rocksdb = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
http = "1"
tonic = { version = "0.12.2", features = ["tls"] }
tonic-reflection = "0.12.3"
tokio = { version = "1.48.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.17", features = ["full"] }
tokio-stream = "0.1.17"
validator = { version = "0.16", features = ["derive"] }
warp = "0.3.5"
headers = "0.4.1"
regex = "1.12.2"
humantime = "2.3.0"
prost-wkt-types = "0.6"
chrono = { version = "0.4.42", features = ["serde", "clock"] }
openssl = { version = "0.10", features = ["vendored"] }
opendal = { version = "0.55.0", features = [
    "services-fs",
    "services-s3",
    "services-azblob",
    "services-gcs",
    "services-oss",
    "services-obs",
    "services-cos",
    "services-webhdfs",
] }
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0.99"
toml_edit = "0.23.7"
toml = "0.8.23"
bytesize = { version = "1.3.3", features = ["serde"] }
bytesize-serde = "0.2.1"
percent-encoding = "2.3.2"
tempfile = "3.23.0"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
serde_json = "1.0.145"
lru = "0.16.2"
fs2 = "0.4.3"
lazy_static = "1.5"
bytes = "1.11"
local-ip-address = "0.6.5"
sysinfo = { version = "0.32.1", default-features = false, features = ["component", "disk", "network", "system", "user"] }
leaky-bucket = "1.1.2"
vortex-protocol = "0.1.5"
dashmap = "6.1.0"
hostname = "^0.4"
tonic-health = "0.12.3"
hashring = "0.3.6"
reqwest-tracing = "0.5"
mocktail = "0.3.0"
fastrand = "2.3.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
incremental = true
strip = false

[profile.bench]
debug = true
