[package]
name = "benches"
description = "benchmarks for the dragonfly client"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
dragonfly-client-storage.workspace = true
dragonfly-client-config.workspace = true
dragonfly-api.workspace = true
chrono.workspace = true
criterion = "0.5"
tokio = { workspace = true, features = ["full"] }
bytes.workspace = true
bytesize.workspace = true

[[bench]]
name = "cache"
path = "dragonfly-client-storage/main.rs"
harness = false
