[package]
name = "dragonfly-api"
version = "2.2.24"
authors = ["Gaius <gaius.qi@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://d7y.io"
repository = "https://github.com/dragonflyoss/api"
description = "Canonical location of the Dragonfly API definition"
readme = "README.md"

[dependencies]
tonic = "0.14"
prost = "0.13.5"
prost-types = "0.14.3"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
prost-wkt-types = "0.6"

[build-dependencies]
tonic-build = "0.12.1"
