[package]
name = "dragonfly-client-backend"
description = "Backend for the dragonfly client"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
dragonfly-client-core.workspace = true
dragonfly-client-util.workspace = true
dragonfly-api.workspace = true
reqwest.workspace = true
tokio.workspace = true
tokio-util.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
tonic.workspace = true
url.workspace = true
tracing.workspace = true
futures = "0.3.28"
libloading = "0.8.4"
opendal = { version = "0.47.3", features = ["services-oss"]}

[dev-dependencies]
httpmock = "0.7.0"
