[package]
name = "dragonfly-client-backend"
description = "Backend for the dragonfly client"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
dragonfly-client-core.workspace = true
dragonfly-client-util.workspace = true
dragonfly-api.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry = "0.7"
reqwest-tracing = "0.5"
tokio.workspace = true
tokio-util.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
tonic.workspace = true
url.workspace = true
tracing.workspace = true
opendal.workspace = true
percent-encoding.workspace = true
futures = "0.3.31"
libloading = "0.8.6"

[dev-dependencies]
tempfile.workspace = true
wiremock = "0.6.2"
rustls-pki-types.workspace = true
rustls-pemfile.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true
