[package]
name = "dragonfly-client-config"
description = "Configuration for the dragonfly client"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
dragonfly-client-core.workspace = true
dragonfly-client-util.workspace = true
clap.workspace = true
regex.workspace = true
serde.workspace = true
tracing.workspace = true
validator.workspace = true
humantime.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tempfile.workspace = true
serde_json.workspace = true
bytesize.workspace = true
bytesize-serde.workspace = true
tonic.workspace = true
rustls-pki-types.workspace = true
rcgen.workspace = true
home = "0.5.11"
local-ip-address = "0.6.5"
hostname = "^0.4"
humantime-serde = "1.1.1"
serde_regex = "1.1.0"
