[package]
name = "dragonfly-client-core"
description = "Core library for the dragonfly client"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
reqwest.workspace = true
thiserror.workspace = true
tonic.workspace = true
tokio.workspace = true
