[package]
name = "dragonfly-client-core"
description = "Core library for the dragonfly client"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
reqwest.workspace = true
reqwest-middleware.workspace = true
thiserror.workspace = true
tonic.workspace = true
tonic-reflection.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
hyper.workspace = true
hyper-util.workspace = true
opendal.workspace = true
url.workspace = true
headers.workspace = true
vortex-protocol.workspace = true
quinn = "0.11.9"