[package]
name = "dragonfly-client-request"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
dragonfly-client-core.workspace = true
dragonfly-client-util.workspace = true
dragonfly-api.workspace = true
async-trait.workspace = true
futures.workspace = true
hostname.workspace = true
bytes.workspace = true
oci-client.workspace = true
oci-spec.workspace = true
reqwest.workspace = true
reqwest-tracing.workspace = true
reqwest-middleware.workspace = true
rustix = { version = "1.1.3", features = ["fs"] }
rustls-pki-types.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tracing.workspace = true
url.workspace = true
tonic-health.workspace = true
thiserror.workspace = true
