[package]
name = "dragonfly-client-request"
description = "Request library for the dragonfly client"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[features]
default = []
# Enables the image preheat API (`Request::preheat` and `PreheatRequest`),
# which pulls in the OCI registry dependencies.
preheat = ["dep:oci-client", "dep:oci-spec"]

[dependencies]
dragonfly-client-core.workspace = true
dragonfly-client-util.workspace = true
dragonfly-api.workspace = true
async-trait.workspace = true
futures.workspace = true
hostname.workspace = true
bytes.workspace = true
oci-client = { workspace = true, optional = true }
oci-spec = { workspace = true, optional = true }
reqwest.workspace = true
reqwest-tracing.workspace = true
reqwest-middleware.workspace = true
rustls-pki-types.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tracing.workspace = true
url.workspace = true
tonic-health.workspace = true
thiserror.workspace = true

[dev-dependencies]
mocktail.workspace = true
