[package]
name = "dragonfly-client-storage"
description = "Storage for the dragonfly client"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
dragonfly-client-core.workspace = true
dragonfly-client-config.workspace = true
dragonfly-client-metric.workspace = true
dragonfly-client-util.workspace = true
# dragonfly-api.workspace = true
dragonfly-api = { git = "file:///codes/dragonflyoss/api_fork", branch = "for_client"}
chrono.workspace = true
reqwest.workspace = true
rocksdb.workspace = true
# rocksdb = { path = "/codes/rust-rocksdb" }
serde.workspace = true
tracing.workspace = true
prost-wkt-types.workspace = true
tokio.workspace = true
tokio-util.workspace = true
crc32fast.workspace = true
fs2.workspace = true
bytes.workspace = true
bytesize.workspace = true
leaky-bucket.workspace = true
vortex-protocol.workspace = true
base64.workspace = true
num_cpus = "1.17"
bincode = "1.3.3"
walkdir = "2.5.0"

# encryption
aes = "0.8"
ctr = "0.9"
cipher = "0.4"
rand = "0.8" 
hkdf = "0.12.4"
sha2 = "0.10.9"
# TODO: version
generic-array = "0.14.7"
# [patch.crates-io]
# generic-array = { version = "0.14.7" }

[dev-dependencies]
tempfile.workspace = true
criterion = "0.5"

[[bench]]
name = "cache"
harness = false

[[bench]]
name = "lru_cache"
harness = false
