[package]
name = "dragonfly-client-storage"
description = "Storage for the dragonfly client"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
vortex-protocol.workspace = true
quinn.workspace = true
dragonfly-client-core.workspace = true
dragonfly-client-config.workspace = true
dragonfly-client-util.workspace = true
dragonfly-api.workspace = true
chrono.workspace = true
reqwest.workspace = true
rocksdb.workspace = true
serde.workspace = true
tracing.workspace = true
prost-wkt-types.workspace = true
tokio.workspace = true
tokio-util.workspace = true
crc32fast.workspace = true
fs2.workspace = true
bytes.workspace = true
bytesize.workspace = true
validator.workspace = true
tonic.workspace = true
url.workspace = true
lazy_static.workspace = true
warp.workspace = true
rustls-pemfile.workspace = true
rustls.workspace = true
sysinfo = { version = "0.32.1", default-features = false, features = ["component", "disk", "network", "system", "user"] }
prometheus = { version = "0.13", features = ["process"] }
num_cpus = "1.17"
bincode = "1.3.3"
walkdir = "2.5.0"
prost = "0.13.5"
leaky-bucket = "1.1.2"
clap.workspace = true
proto = "0.1.2"
rcgen.workspace = true
rustls-pki-types = "1.12.0"

[dev-dependencies]
tempfile.workspace = true
criterion = "0.5"

[[bench]]
name = "cache"
harness = false

[[bench]]
name = "lru_cache"
harness = false
