[package]
name = "dragonfly-client-storage"
description = "Storage for the dragonfly client"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
dragonfly-client-core.workspace = true
dragonfly-client-config.workspace = true
dragonfly-client-metric.workspace = true
dragonfly-client-util.workspace = true
dragonfly-api.workspace = true
chrono.workspace = true
reqwest.workspace = true
rocksdb.workspace = true
rustls-pki-types.workspace = true
serde.workspace = true
tracing.workspace = true
prost-wkt-types.workspace = true
tokio.workspace = true
tokio-util.workspace = true
crc32fast.workspace = true
fs2.workspace = true
bytes.workspace = true
bytesize.workspace = true
leaky-bucket.workspace = true
vortex-protocol.workspace = true
rustls.workspace = true
quinn.workspace = true
num_cpus = "1.17"
bincode = "1.3.3"
walkdir = "2.5.0"
nix = { version = "0.30.1", features = ["socket", "net"] }

[dev-dependencies]
tempfile.workspace = true
criterion = "0.5"

[[bench]]
name = "cache"
harness = false

[[bench]]
name = "lru_cache"
harness = false
