[package]
name = "dragonfly-client-util"
description = "Utility library for the dragonfly client"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
dragonfly-client-core.workspace = true
dragonfly-api.workspace = true
http-range-header.workspace = true
http.workspace = true
tracing.workspace = true
tokio-util.workspace = true
tonic.workspace = true
futures.workspace = true
thiserror.workspace = true
url.workspace = true
regex.workspace = true
reqwest.workspace = true
rcgen.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
rustls-pemfile.workspace = true
sha2.workspace = true
uuid.workspace = true
sysinfo.workspace = true
hex.workspace = true
crc32fast.workspace = true
openssl.workspace = true
lazy_static.workspace = true
bytesize.workspace = true
lru.workspace = true
tokio.workspace = true
bytes.workspace = true
hashring.workspace = true
tonic-health.workspace = true
local-ip-address.workspace = true
hostname.workspace = true
dashmap.workspace = true
reqwest-tracing.workspace = true
reqwest-middleware.workspace = true
rustix = { version = "1.1.2", features = ["fs"] }
base64 = "0.22.1"
pnet = "0.35.0"
protobuf = "3.7.2"
libc = "0.2.177"

[dev-dependencies]
tempfile.workspace = true
mocktail.workspace = true
